hphp/test/zend/good/tests/classes/property_override_protected_privateStatic.php.expectf

Fatal error: Cannot redeclare non-static A::$p as static B::$p in %s/property_override_protected_privateStatic.php on line 11
